add_executable(fuzz_pcap onefile.c fuzz_pcap.c)
target_link_libraries(fuzz_pcap netdissect ${TCPDUMP_LINK_LIBRARIES})
add_executable(bgp_print_fuzzer fuzzmain.c common.c bgp_print_fuzzer.c)
add_executable(ip_print_fuzzer fuzzmain.c common.c ip_print_fuzzer.c)
add_executable(ip6_print_fuzzer fuzzmain.c common.c ip6_print_fuzzer.c)
add_executable(ether_print_fuzzer fuzzmain.c common.c ether_print_fuzzer.c)
target_link_libraries(bgp_print_fuzzer netdissect ${TCPDUMP_LINK_LIBRARIES})
target_link_libraries(ip_print_fuzzer netdissect ${TCPDUMP_LINK_LIBRARIES})
target_link_libraries(ip6_print_fuzzer netdissect ${TCPDUMP_LINK_LIBRARIES})
target_link_libraries(ether_print_fuzzer netdissect ${TCPDUMP_LINK_LIBRARIES})
